<resources>
	<string name="toast_wallet_reset">Wallet was reset,\nwill take some time to recover</string>
	<string name="wallet_disclaimer_fragment_remind_safety">Use at your own risk. Read the &lt;u>safety notes&lt;/u>.</string>
	<string name="wallet_disclaimer_fragment_remind_backup">You need to &lt;u>back up your wallet&lt;/u>!</string>
	<string name="blockchain_state_progress_hours">%1$s, %2$d hours behind</string>
	<string name="blockchain_state_progress_days">%1$s, %2$d days behind</string>
	<string name="blockchain_state_progress_weeks">%1$s, %2$d weeks behind</string>
	<string name="blockchain_state_progress_months">%1$s, %2$d months behind</string>
	<string name="blockchain_state_progress_downloading">Synchronizing with network</string>
	<string name="blockchain_state_progress_stalled">Synchronization stalled</string>
	<string name="blockchain_state_progress_problem_storage">Synchronizing: Storage problem</string>
	<string name="blockchain_state_progress_problem_network">Synchronizing: Network problem</string>
	<string name="wallet_address_fragment_your">Your Sexcoin Address:</string>
	<string name="wallet_address_fragment_clipboard_msg">Sexcoin address copied to clipboard</string>
	<string name="wallet_addresses_fragment_add_dialog_title">Add sexcoin address</string>
	<string name="wallet_addresses_fragment_add_dialog_message">Sexcoin addresses cannot be deleted. Do you want to add a new address to your wallet?</string>
	<string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
	<string name="exchange_rates_activity_title">Exchange Rates</string>
	<string name="exchange_rates_fragment_empty_text">Could not load exchange rates</string>
	<string name="exchange_rates_fragment_default">(default)</string>
	<string name="exchange_rates_fragment_rate">rate</string>
	<string name="exchange_rates_fragment_balance">balance</string>
	<string name="exchange_rates_fragment_source">Price fetched from %s</string>
	<string name="exchange_rates_context_set_as_default_title">Set as default foreign currency</string>
	<string name="wallet_transactions_fragment_tab_received">Received</string>
	<string name="wallet_transactions_fragment_tab_all">Both</string>
	<string name="wallet_transactions_fragment_tab_sent">Sent</string>
	<string name="wallet_transactions_fragment_empty_text_received">No Sexcoins received so far.</string>
	<string name="wallet_transactions_fragment_empty_text_sent">No Sexcoins sent so far.</string>
	<string name="wallet_transactions_fragment_empty_text_howto">How to get Sexcoins?\n\nTrade for traditional money,\nsell goods or services or\nearn by working.</string>
	<string name="wallet_transactions_row_warning_backup">Congratulations, you received your first payment! Have you already &lt;u>backed up your wallet&lt;/u>, to protect against loss?</string>
	<string name="wallet_transactions_fragment_coinbase">mined</string>
	<string name="wallet_transactions_fragment_internal">internal</string>
	<string name="wallet_transactions_context_show_qr_title">Show QR code</string>
    <string name="wallet_transactions_context_browse">Explorer</string>
    <string name="wallet_transactions_context_show_transaction_title">Transaction details</string>
	<string name="wallet_options_backup">Back up Keys</string>
	<string name="wallet_options_disconnect">Disconnect / Close</string>
	<string name="wallet_options_safety">Safety notes</string>
	<string name="wallet_options_donate">Tip / Donate</string>
	<string name="wallet_donate_address_label">Donation for Sexcoin Wallet</string>
	<string name="wallet_low_storage_dialog_title">Internal Device Storage Space Low!</string>
	<string name="wallet_low_storage_dialog_msg">Sexcoin Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your Sexcoins will be at risk!\n\nDo you want to open the Application Manager to uninstall unneeded apps?</string>
	<string name="wallet_low_storage_dialog_button_apps">Manage Apps</string>
	<string name="wallet_timeskew_dialog_title">Check your time settings!</string>
	<string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive Sexcoins due to this problem.\n\nYou should check and correct your time and timezone settings.</string>
	<string name="wallet_timeskew_dialog_button_settings">Settings</string>
	<string name="wallet_version_dialog_title">A new version is available!</string>
	<string name="wallet_version_dialog_msg">This version fixes important bugs. For details, see the change log on Google Play.</string>
	<string name="wallet_version_dialog_button_market">Google Play</string>
	<string name="wallet_version_dialog_button_binary">Download</string>
	<string name="wallet_old_sdk_dialog_title">Android version is out of date</string>
	<string name="wallet_old_sdk_dialog_message">Chances are that one of the next releases of Sexcoin Wallet will not support your device any more. In some cases, it can get difficult to spend coins on this device.\n\nUnless you know what you are doing, it is recommended to move out your coins soon.</string>
	<string name="send_coins_activity_title">Send Sexcoins</string>
	<string name="send_coins_fragment_receiving_address_label">Pay to</string>
	<string name="send_coins_fragment_receiving_address_hint">type address or name</string>
	<string name="send_coins_fragment_receiving_address_error">Invalid Sexcoin Address!</string>
	<string name="send_coins_fragment_receiving_address_error_cross_network">Cannot use %s address with this wallet!</string>
	<string name="send_coins_fragment_receiving_address_error_cross_network_unknown">Cannot use address of unknown network with this wallet!</string>
	<string name="send_coins_fragment_available_label">Available for spending</string>
	<string name="send_coins_fragment_pending">(SXC %s waiting for confirmation)</string>
	<string name="send_coins_fragment_amount_label">Amount to pay</string>
	<string name="send_coins_fragment_amount_empty">Put amount here</string>
	<string name="send_coins_fragment_amount_error">Invalid amount!</string>
	<string name="send_coins_fragment_bluetooth_enable">Send payment also via Bluetooth</string>
	<string name="send_coins_fragment_bluetooth_ack">Your payment was successfully sent via Bluetooth.</string>
	<string name="send_coins_fragment_bluetooth_nack">Your payment was rejected via Bluetooth.</string>
	<string name="send_coins_fragment_button_send">Send</string>
	<string name="send_coins_fragment_button_back">Back</string>
	<string name="send_coins_preparation_msg">Signing…</string>
	<string name="send_coins_sending_msg">Sending…</string>
	<string name="send_coins_sent_msg">Sent!</string>
	<string name="send_coins_failed_msg">Failed!</string>
	<string name="send_coins_error_msg">Problem sending coins!</string>
	<string name="send_coins_options_empty">Empty wallet</string>
	<string name="send_coins_address_context_clear_title">Enter new address</string>
	<string name="request_coins_activity_title">Request Sexcoins</string>
	<string name="request_coins_fragment_address_label">Address to request to</string>
	<string name="request_coins_fragment_include_address_label">include label with address</string>
	<string name="request_coins_fragment_amount_label">Requested amount (optional)</string>
	<string name="request_coins_fragment_initiate_request_qr">Have this code scanned by the sender.</string>
	<string name="request_coins_fragment_initiate_request_nfc">Or tap an NFC enabled device.</string>
	<string name="request_coins_fragment_bluetooth_enabled">Accepting payments via Bluetooth.</string>
	<string name="request_coins_clipboard_msg">Sexcoin request copied to clipboard</string>
	<string name="request_coins_share_dialog_title">Share request for Sexcoins…</string>
	<string name="request_coins_options_local_app_title">Request from local app</string>
	<string name="address_book_activity_title">Address Book</string>
	<string name="address_book_list_receiving_title">Your addresses</string>
	<string name="address_book_list_sending_title">Sending addresses</string>
	<string name="address_book_empty_text">No entries in address book</string>
	<string name="address_book_context_send_title">Send Sexcoins to address</string>
	<string name="address_book_context_edit_title">Edit address</string>
	<string name="address_book_context_remove_title">Remove address</string>
	<string name="address_book_context_show_qr_title">Show QR code</string>
	<string name="address_book_context_copy_to_clipboard_title">Copy to clipboard</string>
	<string name="address_book_context_default_title">Set as default address</string>
	<string name="address_book_options_paste_from_clipboard_title">Paste from clipboard</string>
	<string name="address_book_options_copy_from_clipboard_msg_empty">Clipboard is empty</string>
	<string name="address_book_options_scan_title">Scan address</string>
	<string name="address_book_row_message_compromised_key">This address might be compromised. You should not use it any more for receiving coins.</string>
	<string name="edit_address_book_entry_dialog_title_add">Add address</string>
	<string name="edit_address_book_entry_dialog_title_edit">Edit address</string>
	<string name="edit_address_book_entry_dialog_address_label">Address</string>
	<string name="edit_address_book_entry_dialog_label_label">Name</string>
	<string name="edit_address_book_entry_dialog_button_edit">Save</string>
    <string name="transaction_activity_title">Transaction</string>
    <string name="transaction_fragment_time_label">Date</string>
    <string name="transaction_fragment_amount_sent_label">Sent</string>
    <string name="transaction_fragment_amount_received_label">Received</string>
    <string name="transaction_fragment_from_label">Sender</string>
    <string name="transaction_fragment_to_label">Receiver</string>
    <string name="transaction_fragment_you">you</string>
    <string name="transaction_fragment_status_label">Status</string>
    <string name="transaction_fragment_status_unknown">unknown</string>
    <string name="transaction_fragment_status_pending">waiting for confirmation</string>
    <string name="transaction_fragment_status_confirmed">confirmed</string>
    <string name="transaction_fragment_status_dead">dead</string>
    <string name="transaction_fragment_hash_label">Hash</string>
    <string name="transaction_fragment_hash_clipboard_msg">Transaction hash copied to clipboard</string>
    <string name="transaction_fragment_length_label">Length</string>
	<string name="transaction_row_message_purpose_key_rotation">This transaction strengthens your wallet against theft. &lt;u>More info.&lt;/u></string>
	<string name="transaction_row_message_own_unbroadcasted">This payment has not been transmitted yet.</string>
	<string name="transaction_row_message_received_unconfirmed_unlocked">This payment should become spendable in a few minutes.</string>
	<string name="transaction_row_message_received_unconfirmed_locked">This payment is not standard and should not be trusted.</string>
	<string name="transaction_row_message_received_dead">This payment has been reversed by the sender.</string>
	<string name="transaction_row_message_received_dust">This small amount can probably never be spent economically.</string>
    <string name="network_monitor_activity_title">Network Monitor</string>
	<string name="network_monitor_peer_list_title">Peers</string>
	<string name="network_monitor_block_list_title">Blocks</string>
	<string name="peer_list_fragment_empty">No peers connected</string>
	<string name="about_title">About</string>
	<string name="about_license_title">License</string>
	<string name="about_credits_zxing_title">"This app is using 'zxing'"</string>
	<string name="about_author_twitter_title">Author at Twitter</string>
    <string name="about_market_app_title">Google Play Page</string>
	<string name="about_market_app_summary">Review or rate the app</string>
</resources>